<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/reply"
        android:icon="@drawable/ic_reply_white_24dp"
        android:title="@string/compose_menu_reply" />

    <item
        android:id="@+id/copy"
        android:icon="@drawable/ic_content_copy_black_24dp"
        android:title="@string/compose_menu_copy" />

    <item
        android:id="@+id/forward"
        android:icon="@drawable/ic_forward_black_24dp"
        android:title="@string/compose_menu_forward" />

    <item
        android:id="@+id/pin_message"
        android:icon="@drawable/ic_baseline_push_pin_24"
        android:title="@string/compose_menu_pin" />

    <item
        android:id="@+id/unpin_message"
        android:icon="@drawable/ic_baseline_push_pin_24"
        android:title="@string/compose_menu_unpin" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/compose_menu_delete" />

    <item
        android:id="@+id/select_message"
        android:icon="@drawable/ic_check_white_24dp"
        android:title="@string/compose_menu_select" />

</menu>
