<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 Moez Bhatti <moez.bhatti@gmail.com>
  ~
  ~ This file is part of QKSMS.
  ~
  ~ QKSMS is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ QKSMS is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with QKSMS.  If not, see <http://www.gnu.org/licenses/>.
  -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clipChildren="false"
        android:clipToPadding="false">

        <dev.octoshrimpy.quik.common.widget.QkTextView
            android:id="@+id/dateHeader"
            style="@style/TextSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/message_only"
            android:backgroundTint="?android:attr/colorBackground"
            android:clickable="true"
            android:elevation="2dp"
            android:focusable="false"
            android:gravity="center"
            android:paddingStart="12dp"
            android:paddingTop="4dp"
            android:paddingEnd="12dp"
            android:paddingBottom="4dp"
            android:visibility="gone"
            app:textSize="tertiary"
            tools:text="2026년 8월 12일 수요일"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="12dp"
            android:orientation="vertical"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:contentDescription="@string/compose_message_item">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                android:clipChildren="false"
                android:clipToPadding="false">

                <ImageView
                    android:id="@+id/sim"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="2dp"
                    android:contentDescription="@string/compose_message_sim"
                    android:src="@drawable/ic_sim_card_black_24dp"
                    app:tint="?android:attr/textColorSecondary" />

                <dev.octoshrimpy.quik.common.widget.QkTextView
                    android:id="@+id/simIndex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="?android:attr/textColorSecondary"
                    app:textSize="tertiary"
                    tools:text="1" />

            </LinearLayout>

            <dev.octoshrimpy.quik.common.widget.QkContextMenuRecyclerViewLongMmsPart
                android:id="@+id/parts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="2dp"
                android:gravity="end"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="1"
                tools:listitem="@layout/mms_image_preview_list_item" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false">

                <FrameLayout
                    android:id="@+id/cancelFrame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/bodyBox"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="12dp"
                    android:clipToPadding="false"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <ProgressBar
                        android:id="@+id/cancel"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:background="@drawable/circle"
                        android:backgroundTint="?attr/bubbleColor"
                        android:clickable="false"
                        android:foreground="?attr/selectableItemBackground"
                        android:indeterminate="false"
                        android:progressDrawable="@drawable/circular_progress_bar"
                        tools:progress="45"
                        tools:progressTint="@color/tools_theme"
                        tools:visibility="visible" />

                    <ImageView
                        android:id="@+id/cancelIcon"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:clickable="false"
                        android:contentDescription="@string/compose_message_cancel"
                        android:padding="6dp"
                        android:src="@drawable/ic_stop_black_24dp"
                        tools:tint="@color/tools_theme" />

                </FrameLayout>

                <LinearLayout
                    android:id="@+id/bodyBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/sendNowIcon"
                    android:layout_toEndOf="@id/cancelFrame"
                    android:orientation="horizontal"
                    android:clipChildren="false"
                    android:clipToPadding="false">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="18dp"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/bubble"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/message_only"
                            android:backgroundTint="?attr/bubbleColor"
                            android:minHeight="36dp"
                            android:orientation="vertical">

                            <dev.octoshrimpy.quik.common.widget.TightTextView
                                android:id="@+id/body"
                                style="@style/TextPrimary"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:autoLink="email|phone|web"
                                android:gravity="start|center_vertical" />

                            <dev.octoshrimpy.quik.common.widget.QkTextView
                                android:id="@+id/timestamp"
                                style="@style/TextSecondary"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_marginTop="2dp"
                                android:paddingStart="4dp"
                                android:paddingEnd="4dp"
                                app:textSize="tertiary"
                                tools:text="오후 3:42" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/reactions"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-16dp"
                            android:layout_marginTop="-10dp"
                            android:orientation="horizontal"
                            android:visibility="gone"
                            tools:visibility="visible">

                            <TextView
                                android:id="@+id/reactionText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/message_only"
                                android:backgroundTint="?android:attr/colorBackground"
                                android:elevation="2dp"
                                android:maxLines="1"
                                android:paddingStart="8dp"
                                android:paddingTop="4dp"
                                android:paddingEnd="8dp"
                                android:paddingBottom="4dp"
                                android:text="👍"
                                android:textColor="?android:attr/textColorPrimary"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/sendNowIcon"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignBottom="@id/bodyBox"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/circle"
                    android:backgroundTint="?attr/bubbleColor"
                    android:baselineAlignBottom="true"
                    android:contentDescription="@string/compose_message_send_now"
                    android:padding="6dp"
                    android:src="@drawable/ic_send_black_24dp"
                    android:visibility="gone"
                    tools:tint="@color/tools_theme"
                    tools:visibility="visible" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <dev.octoshrimpy.quik.common.widget.QkTextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/compose_message_attachment"
                    android:textColor="?android:attr/textColorSecondary"
                    app:textSize="tertiary"
                    tools:text="Sending..." />

                <ImageView
                    android:id="@+id/resendIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle"
                    android:backgroundTint="?attr/bubbleColor"
                    android:baselineAlignBottom="false"
                    android:contentDescription="@string/compose_message_send_now"
                    android:padding="6dp"
                    android:src="@drawable/ic_sync_black_24dp"
                    android:visibility="gone"
                    tools:tint="@color/tools_theme"
                    tools:visibility="visible" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
